
* **Updated Theme Blvd framework to 2.6.1**
* Improvement: Better handling of pulling default value for new option, when theme options have already been saved (i.e. smoother updates when the theme adds new options, which you haven't configured).
* Improvement: Allow unfiltered HTML when saving text and textareas.
* Improvement: De-enqueued `theme.js`, no longer needed with framework 2.6+.
* Fixed: Footer columns not pulling page content.
* Fixed: Post showcase filtering not correctly effecting corresponding lightbox gallery.
* Fixed: Time ago date formatting not calculated correctly when time zone changed from GMT-0.
* Fixed: Self-hosted background video not looping in some browsers.

--------------------------------------------------------------

2.1.0 - 05/05/2016
------------------

*Warning: Make sure to read this article before updating: [Updating to Jump Start 2.1](http://news.themeblvd.com/2016/05/05/updating-to-jump-start-2-1/)*

* **Updated Theme Blvd framework to 2.6.0**
* New: "Agent" theme base - A modern and open, agency-style design with a bit less user options.
* New: 5 new demos - [Demo #1](http://demoblvd.com/themes/jumpstart-2/demo-1), [Demo #8](http://demoblvd.com/themes/jumpstart-2/demo-8), [Demo #9](http://demoblvd.com/themes/jumpstart-2/demo-9), [Demo #10](http://demoblvd.com/themes/jumpstart-2/demo-10), and [Developer Demo](http://demoblvd.com/themes/jumpstart-2/demo-dev).
* New: Theme welcome message that leads user to the [framework overview video](https://vimeo.com/124567552) when activating the theme.
* New: Featured media above page and post content.
    * New "Epic Thumbnails" on single posts and pages; see Post and Page Options meta boxes for new featured images display options.
    * New global option for how pages display the featured image; see *Appearance > Theme Options > Content > Pages*.
    * New variable-width slider carousel for gallery posts; see *Appearance > Theme Options > Content > General*.